# crypticizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
src/: backup.cpp  backup.h  crypticizer.cpp  crypticizer.h  cryptor.cpp  cryptor.h  errorcodes.h  filestrhelper.cpp  filestrhelper.h  gitwrap.cpp  gitwrap.h  menu.cpp  menu.h  session.cpp  session.h
test/: Makefile  aeadtest.cpp  backuptest.cpp  boxwritetest.cpp  hashertest  hashertest.cpp  scrypttest.cpp  tmpfiletest.cpp  windowtest.cpp
